--- a/index.html
+++ b/index.html
@@ -2943,7 +2943,7 @@ window.FlexDashboardComponents.push({
 <li><a href="Contents/Material/Part%20E%20-%20Data%20validation/Lecture_E.html" target="_blank">Lecture E</a></li>
 <li><a href="Contents/Material/Part%20E%20-%20Data%20validaPractical_E_walkthrough.html" target="_blank">Practical E</a></li>
 <li><a href="Contents/Material/Part%20E%20-%20Data%20validation/Practical_E.html" target="_blank">Impractical E</a></li>
-<li>Data for the practical: <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/bands.txt" target="_blank">bands.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/unnamed.csv" target="_blank">unnamed.csv</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/people.txt">people.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/peoplerules.txt">peoplerules.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/dirty_iris.txt">dirty_iris.txt</a></li>
+<li>Data for the practical: <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/bands.txt" target="_blank">bands.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/unnamed.xls" target="_blank">unnamed.xls</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/people.txt">people.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/peoplerules.txt">peoplerules.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/dirty_iris.txt">dirty_iris.txt</a></li>
 </ul></li>
 <li><p>Part F: Imputation</p>
 <ul>
