--- a/index.html
+++ b/index.html
@@ -2947,7 +2947,8 @@ window.FlexDashboardComponents.push({
 <li><p>Part F: Imputation</p>
 <ul>
 <li><a href="Contents/Material/Part%20F%20-%20Imputation/Lecture_F.html" target="_blank">Lecture F</a></li>
-<li><a href="Contents/Material/Part%20F%20-%20Imputation/Lecture_F_handout.html" target="_blank">Lecture F Handout</a> <!-- - [Practical F](Contents/Material/Part F - Imputation/Practical_F_walkthrough.html){target="_blank"} --></li>
+<li><a href="Contents/Material/Part%20F%20-%20Imputation/Lecture_F_handout.html" target="_blank">Lecture F Handout</a></li>
+<li><a href="Contents/Material/Part%20F%20-%20Imputation/Practical_F_walkthrough.html" target="_blank">Practical F</a></li>
 <li><a href="Contents/Material/Part%20F%20-%20Imputation/Practical_F.html" target="_blank">Impractical F</a></li>
 </ul></li>
 </ul>
